[tool.poetry]
name = "syntaxyggdrasil"
version = "0.1.0"
description = ""
authors = ["Sebastian Kalisz <sk.kaliszs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.14"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-minify-plugin = "0.6.4"
mkdocs-redirects = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
